[package]
name = "stdx"
edition.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
lz4_flex.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
tapi.workspace = true
tokio.workspace = true
tracing.workspace = true
