[package]
name = "xtask"
edition = "2021"
version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
ce-core.workspace = true
clap.workspace = true
color-eyre.workspace = true
heck = "0.4.1"
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
tapi.workspace = true
tokio.workspace = true
toml_edit = "0.20.0"
tracing.workspace = true
xshell = "0.2.3"
