[package]
name = "ce-compiler"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ce-core.workspace = true
gcl.workspace = true
graphviz-rust = "0.7.2"
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
tapi.workspace = true
