[package]
name = "ce-pv"
edition = "2021"
version.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ce-core.workspace = true
dioxus.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
gcl.workspace = true
z3 = {version="0.12", features = ["static-link-z3"]}
env_logger = "0.9.0"
